# gourmet_search

./: README.md  pyproject.toml
gourmet_search/config/: settings.py  urls.py
gourmet_search/search/: urls.py  views.py
gourmet_search/search/module/: hotpepper_api.py
gourmet_search/search/templates/search/: genre.html  index.html  shop.html  small.html
